# departures

./: CMakeLists.txt  Makefile  api_help.txt  color.h  departures.c  deploy-departures.sh  deploy-funcs.sh  gen-cmake.sh  genversion.sh  login-prod.sh  parser.c  parser.h  readme.txt  run-tests.sh  stations.c  stations.h  stations_defs.c  util.c  util.h  watchdog.sh
tests/: 1.txt  server.py
tests/01/: njtransit-17.html  njtransit-AZ.html  njtransit-BF.html  njtransit-FZ.html  njtransit-GK.html  njtransit-HB.html  njtransit-MZ.html  njtransit-PL.html  njtransit-RF.html  njtransit-RW.html  njtransit-RY.html  njtransit-SF.html  njtransit-TS.html  njtransit-UF.html  njtransit-WK.html  njtransit-XG.html  njtransit-train-XG-77.html  njtransit-train-XG-79.html  njtransit-train-XG-81.html
tests/02/: njtransit-CB.html  njtransit-CW.html  njtransit-HB.html  njtransit-MD.html  njtransit-OS.html  njtransit-PO.html  njtransit-RM.html  njtransit-TC.html  njtransit-XG.html  njtransit-train-HB-41.html  njtransit-train-XG-48.html  njtransit-train-XG-52.html  njtransit-train-XG-54.html
tests/03/: njtransit-CB.html  njtransit-CW.html  njtransit-MD.html  njtransit-OS.html  njtransit-PO.html  njtransit-RM.html  njtransit-TC.html  njtransit-XG.html  njtransit-train-XG-52.html  njtransit-train-XG-54.html  njtransit-train-XG-56.html
